# Prisma3d

./: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: android-ci.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/environments/: default_ibl.ktx
app/src/main/kotlin/com/prisma3d/: PrismaApplication.kt
app/src/main/kotlin/com/prisma3d/di/: Module.kt
app/src/main/kotlin/com/prisma3d/ui/main/: HomeScreen.kt  MainActivity.kt
app/src/main/res/raw/: prisma_default_material.mat
app/src/main/res/values/: themes.xml
core/common/: build.gradle.kts
core/engine/: build.gradle.kts
core/engine/src/main/cpp/: CMakeLists.txt  JniBridge.cpp  Renderer.cpp  SceneManager.cpp
feature/import_export/: build.gradle.kts
feature/import_export/src/main/kotlin/com/prisma3d/io/: GltfImporter.kt
feature/modeling/: build.gradle.kts
feature/modeling/src/main/cpp/: ModelingOps.cpp
feature/rendering/: build.gradle.kts
feature/scene/src/main/kotlin/com/prisma3d/scene/: OutlinerScreen.kt
feature/timeline/: build.gradle.kts
feature/timeline/src/main/kotlin/com/prisma3d/timeline/: TimelineController.kt
feature/ui/: build.gradle.kts
feature/ui/src/main/kotlin/com/prisma3d/ui/components/: NodeGraph.kt  PropertyGrid.kt
feature/ui/src/main/kotlin/com/prisma3d/ui/theme/: Theme.kt
feature/viewport/: build.gradle.kts
feature/viewport/src/main/kotlin/com/prisma3d/viewport/: PrismaViewport.kt
feature/viewport/src/main/kotlin/com/prisma3d/viewport/gizmo/: GizmoManager.kt
gradle/: libs.versions.toml
